align content fixed on piatto dello chef

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -23,10 +23,12 @@
   padding-right: 1.1em;
   text-align: left;
   width: 33%;
+  align-self: center;
 }
 
 #dishesContainer {
   width: 67%;
+  align-content: center;
 }
 
 #dayIndicator {
